--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -62,7 +62,13 @@
             <artifactId>nacos-client</artifactId>
             <version>1.3.0</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty-version}</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>org.example</groupId>-->
 <!--            <artifactId>RPC-test</artifactId>-->
 <!--            <version>1.0-SNAPSHOT</version>-->
